add data persistence and enhance UI for report decision management